@@ -1,3 +1,9 @@
+2004-01-28 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b4
+
+	* Bugfix: The Radiobutton for Shutterflys Donation is set always.
+		  So its saved always as Service.
+		  Fix is a workaround.
+
 2004-01-28 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b3
 
 	* "Bugfix": - Added new css class .adminform. 
